# twelf

./: .gitignore  .ugrep  APPLY_FIXES_README.md  CLAUDE.md  CURRYING_CONVERSION.md  CURRYING_FINAL_STATUS.md  CURRYING_STATUS.md  DOCUMENTATION_STATUS.md  Grep.mk  Makefile  README  README.md  add_prelude.sh  apply_fixes.py  apply_fixes.sh  build_output.txt  changes.txt  curry_convert.sh  curry_converter.ml  dune-project  dune-workspace  errors.txt  fix_call_sites.sh  fixes.md  nvim  output.txt  perl  quick.txt  rename_ocaml.sh  rewrite.sh  search.sh  sgconfig.yml  sml-basis.txt  sources.cm  syn_errors.txt  syn_errors_files.todo  syntax_errors.txt  twelf.opam  untitled-plan-fixTwelfOcamlSyntaxErrors.prompt.md
TEST/: all-nt.ml  all.ml  cp2nd.ml  cp2nd.sml  cp3rd.ml  cp3rd.sml  cr.ml  m.ml  m.sml  meta.ml  regression.ml  regression.sml  relfun.ml  relfun.sml  runquiet.ml  skolem.ml  unsafe.ml
_build/: .db  .digest-db  log
bin_old/: dune  twelf-server
grep/: rewrite.pl
lib/: dune
lib/frontend/: dune  fquery.ml  fquery.mli  frontend.ml  lexer.ml  lexer.mli  parse_condec.ml  parse_condec.mli  parse_fixity.ml  parse_fixity.mli  parse_mode.ml  parse_mode.mli  parse_module.ml  parse_module.mli  parse_query.ml  parse_query.mli  parse_term.ml  parse_term.mli  parse_thm.ml  parse_thm.mli  parser.ml  parser.mli  parsing.ml  parsing.mli  recon_condec.ml  recon_condec.mli  recon_mode.ml  recon_mode.mli  recon_module.ml  recon_module.mli  recon_query.ml  recon_query.mli  recon_term.ml  recon_term.mli  recon_thm.ml  recon_thm.mli  solve.ml  solve.mli  twelf.ml  twelf.mli  (+5 more)
(+2300 files in other folders)
