(lang dune 3.19)

(name twelf)

(generate_opam_files true)

(source
 (github wizard7377/twelf))

(authors "Asher Frost")

; (maintainers "Maintainer Name <maintainer@example.com>")

(license LICENSE)

; (documentation https://url/to/documentation)

(package
 (name twelf)
 (synopsis "Implementation of the Edinburgh Logical Framework")
 (description "An OCaml port of the Twelf project, an implementation of the Edinburgh Logical Framework (LF) and its extensions.")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
